# PinyinCopybook

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
pinyinCopybook/: __init__.py  font.py  template.py
tests/: test_a4.py  test_a4_grid.py  test_a4_grid2.py  test_a4_pinyin.py
